Sat Jun  5 15:04:15 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Repository_Manager.cpp:

          Updated the repository manager to dump out the
          top level package and the deployment plan.

Sat Jun  5 14:59:47 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/README:
	  Added this readme file for user to understand the testing scenario.


Sat Jun  5 14:46:12 2004  Tao Lu  <lu@dre.vanderbilt.edu>

        * ./DnC/ciao/Servant_Impl_Base.h:

          Cosmetic changes.

        * DnC/ciao/Servant_Impl_T.cpp:
        * DnC/ciao/Servant_Impl_T.h:

          Removed one of the template parameters and used instead
          the typedefs generated by the IDL compiler for interfaces.

	  Followed Jeff Parson's Changes. Hopefully we can merge the two
	  ciao directories soon so I don't have to duplicate the commit
	  every time after Jeff makes changes.

Fri Jun  4 18:16:47 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_Base.h:

          Cosmetic changes.

        * ciao/Servant_Impl_T.cpp:
        * ciao/Servant_Impl_T.h:

          Removed one of the template parameters and used instead
          the typedefs generated by the IDL compiler for interfaces.

        * CIDLC/ServantSourceGenerator.cpp:

          Moved the call to populate_port_tables() from ciao_postactivate()
          to the servant constructor.

Fri Jun  4 17:19:44 2004  Krishnakumar B  <kitty@nospam.invalid.domain>

        * DnC/tests/Config_Handlers/HUDisplay/Airframe.ccd:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe.cid:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe.cpd:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe_Exec.iad:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe_Stub.iad:
        * DnC/tests/Config_Handlers/HUDisplay/Airframe_Svnt.iad:
        * DnC/tests/Config_Handlers/HUDisplay/Domain.cdd:
        * DnC/tests/Config_Handlers/HUDisplay/GPS.ccd: