@@ -1,3 +1,13 @@
+Sat Jun  5 16:45:14 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
+        * DnC/RepositoryManager/RepositoryManager_Impl.h:
+        * DnC/RepositoryManager/Repository_Manager.cpp:
+
+          Updated repository manager to return the PackageConfiguration
+          element created while parsing the top level package
+          URL.
+
 Sat Jun  5 15:04:15 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/RepositoryManager/Repository_Manager.cpp:
